--- a/web.html
+++ b/web.html
@@ -8,6 +8,9 @@
             <h1>
                 Hola Bienvenidos a mi ejemplo.
             </h1>
+            <h2>
+                Recordad tomar el curso de Git y GitHub
+            </h2>
         </div>
     </body>
 </html>
